Closed Bug 1920112 Opened 2 months ago Closed 2 months ago

Hulu is not playing in Nightly on Windows Machine

Categories

(Core :: Audio/Video: Playback, defect, P1)

Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox130 --- disabled
firefox131 --- disabled
firefox132 + verified

People

(Reporter: dbaker, Assigned: alwu, NeedInfo)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Setup:

  • Have media.wmf.media-engine.enabled set to 1 or 2 (default is 2 for Nightly otherwise 0)
  • Hulu login

Steps:

  • Select a show to play that you have not started. (You may need to skip to the next episode)

Actual Result:

  • The video does not play

Expected Result:

  • Video plays

I only see a problem if this is a show starting from the beginning. If I am resumming a show I was watching it works.

Profiler: https://share.firefox.dev/4e7obXd

Assignee: nobody → alwu
Blocks: mfcdm
Severity: -- → S1
Priority: -- → P1

This issue ONLY occurs on Nightly due to the setting media.eme.mfcdm.origin-filter.enabled=0. On Nightly, all websites are allowed to use PlayReady. On Beta and DevEdition, only specific websites are permitted to use PlayReady, and on Release we don't even enable PlayReady.

The root cause is that Hulu makes an incorrect assumption about HEVC support. They should use MediaCapabilitiesKeySystemConfiguration to obtain accurate results. Initially, Hulu created three different key system accesses, where PlayReady supported HEVC, but Widevine did not. Hulu then used CanPlayType() to check HEVC support and received a probably response.

Subsequently, Hulu set a media key for Widevine L3, which does not support HEVC. Then Hulu started feeding HEVC video samples for playback. Hulu should have only provided video formats supported by the media key's capabilities but instead serving HEVC, which is not supported by Widevine L3, leading to this issue.

(In reply to Dan Baker[:dbaker] from comment #0)

I only see a problem if this is a show starting from the beginning. If I am resumming a show I was watching it works.

When resuming a video, Hulu will use h264 for video, which is correct and won't cause any problem.

Hulu has incorrect behavior when PlayReady is available, the detailed
anaysis of the problem is decribed in [1].

In order to keep testing more compat issues like this, but keep Hulu
working on Nightly, this patch changes the filter to block list in order
to allow other sites to keep using PlayReady on Nightly.

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=1920112#c1

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5bb53a84f16d add Hulu to the blocked list and use the blocked list by default on Nightly. r=media-playback-reviewers,jolin
Status: NEW → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch

Should we post something to the hulu list about the issue in comment 1?

Flags: needinfo?(alwu)

Yes, we can let them know that using MediaCapabilitiesKeySystemConfiguration, which is shipped on Fx129, would have better accuracy for knowing support video. Currently they use MediaElement::CanPlayType and MediaSource::IsTypeSupport. In addition, if we fix bug 1866265, that might be allowed Hulu play HEVC on Widevine L3. As L3 is used for decryption, the decoding is still relying on our platform decoder. And the reason of Hulu failure is the same for bug 1866265.

I will let them know later after I finished the investigation for bug 1866265. Keep NI.

Flags: qe-verify+

I tried to reproduce the issue on Win11x64 using FF builds 132.0a1(2024-09-16) and 132.0a1(2024-09-20), but no clear reproduction and also using vpn to access hulu, I need you help in order to confirm the fix.
Dan Baker, can you please confirm that issue is not reproducing on your side using latest Firefox build https://archive.mozilla.org/pub/firefox/candidates/132.0b2-candidates/. Thank you.

Flags: needinfo?(dbaker)

This works fine for me with the changes from Alastor.

Flags: needinfo?(dbaker)

Marked as verified based on comment#9.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: